--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@react-native-menu/menu": "^1.2.4",
     "@react-navigation/native": "^7.1.6",
     "@reduxjs/toolkit": "^2.8.2",
+    "@lottiefiles/dotlottie-react": "^0.7.0",
     "aes-js": "^3.1.2",
     "crypto-js": "^4.2.0",
     "expo": "^53.0.20",
